tests/core/errors/test_exit_code_data/TARGETS.fixture
load(":defs.bzl", "build_fail")

trivial_build(name = "build_success")

build_fail(name = "build_fail")
